# alox

./: .dockerignore  Cargo.toml  Makefile  README.md  alox.xmi  docker-compose.yml  test.sh
.docker/: alox.Dockerfile  build.sh  noria-server.Dockerfile  test.sh
admin/: README.md  angular.json  package.json
alox/: Cargo.toml
alox-admin/: README.md  angular.json
alox-admin/src/: index.html
alox-cli/: Cargo.toml
alox-derive/: Cargo.toml
alox-derive/src/: lib.rs
alox/src/: lib.rs
alox/src/api/: app.rs  bucket.rs  error.rs  mod.rs  response.rs  user.rs
alox/src/cms/: block.rs
alox/src/config/: app.rs  cms.rs  mod.rs  proxy.rs
alox/src/db/: error.rs  mod.rs
alox/src/mdw/: jwt.rs
alox/src/model/: app.rs  bucket.rs  cms.rs  mod.rs  page.rs  permission.rs  proxy.rs  user.rs
alox/src/model/cms/: mod.rs
alox/src/repo/: app.rs  mod.rs  permission.rs  user.rs
alox/src/util/: jwt.rs  mod.rs
alox/tests/: config.rs  db.rs  misc.rs
aloxd/: Cargo.toml
aloxd/src/: app.rs  head.rs  lib.rs  main.rs
aloxd/src/api/: app.rs  user.rs
aloxd/src/cms/: block.rs  mod.rs
aloxd/src/model/: app.rs  mod.rs  site.rs  user.rs
aloxd/src/repo/: app.rs  user.rs
aloxd/tests/: db.rs  user.rs
dev/etc/: alox.toml
dev/etc/conf.d/: dev.toml
dev/var/ext/dev/: ext.ron
dev/var/ext/dev/blocks/: heading.ron
dev/var/ext/dev/layouts/: default.ron
dev/var/ext/dev/templates/: heading.tera
dev/var/ext/dev/templates/layouts/: default.tera
dev/var/ext/dev/templates/partials/: footer.tera  header.tera
server/: Cargo.toml
server/src/: head.rs  lib.rs
server/src/api/: content.rs  error.rs  mod.rs  page.rs  perm.rs  site.rs  user.rs
server/src/cms/: mod.rs  site.rs  template.rs
server/src/config/: ext.rs  mod.rs
server/src/config/ext/: block.rs  mod.rs
server/src/mdw/: jwt.rs
server/src/model/: content.rs  ext.rs  mod.rs  page.rs  perm.rs  permission.rs  site.rs  user.rs
server/src/repo/: content.rs  mod.rs  page.rs  perm.rs  permission.rs  site.rs  user.rs
server/tests/: config.rs  db.rs  misc.rs
src/admin/: package-lock.json  package.json
src/admin/src/app/: app.component.ts
src/cli/src/: main.rs
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/api/: mod.rs  user.rs
src/server/src/cms/: template.rs
src/server/src/config/: alox.rs
src/server/src/middleware/: jwt.rs
src/server/src/model/: block_instance.rs
src/server/tests/: config.rs  misc.rs
test-data/: alox.toml
xtask/: Cargo.toml
xtask/src/: main.rs
