[package]
name = "alox"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-service = "1.0.6"
actix-rt = "1.1.1"

ron = "0.6.1"

[dependencies.serde]
version = "1.0.115"
features = [ "derive" ]