[package]
name = "alox"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-web-httpauth = "0.4.2"
actix-service = "1.0.6"
actix-rt = "1.1.1"
actix-router = "0.2.4"
jsonwebtoken = "7.2.0"

chrono = "0.4.15"
rand = "0.7.3"
blake2 = "0.9.0"
hex = "0.4.2"
maplit = "1.0.2"
log = "0.4.11"

toml = "0.5.6"
serde_json = "1.0.57"

bb8 = "0.4.2"
arangors = "0.4.3"

futures = "0.3.5"
futures-util = "0.3.5"
async-trait = "0.1.40"

[dependencies.serde]
version = "1.0.115"
features = [ "derive" ]

[dev-dependencies.tokio]
version = "0.2.22"
features = [
    "rt-threaded",
    "macros"
]
