[package]
name = "aloxd"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alox = { path = "../alox" }

[dev-dependencies]

    [dev-dependencies.tokio]
    version = "0.2.22"
    features = [
        "rt-threaded",
        "macros"
    ]
    [dev-dependencies.env_logger]
    version = "0.7.1"