[package]
name = "alox-server"
version = "0.1.0"
authors = ["Daniel Wanner <daniel.wanner@pm.me>"]
edition = "2018"

[lib]
path = "src/lib.rs"
name = "alox"

[[bin]]
path = "src/main.rs"
name = "aloxd"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0-beta.3"
actix-web-httpauth = "0.4.2"
actix-service = "1.0.6"
actix-rt = "1.1.1"
actix-router = "0.2.4"
jsonwebtoken = "7.2.0"

chrono = "0.4.15"
rand = "0.7.3"
blake2 = "0.9.0"
maplit = "1.0.2"
log = "0.4.11"
multimap = "0.8.2"
base64 = "0.12.3"

toml = "0.5.6"
serde_json = "1.0.57"
ron = "0.6.2"

rsass = "0.15.0"
tera = "1.5.0"

bb8 = "0.4.2"
arangors = "0.4.3"

clap = "2.33.3"

futures = "0.3.5"
futures-util = "0.3.5"
async-trait = "0.1.40"

[dependencies.serde]
version = "1.0.115"
features = [ "derive" ]

[dev-dependencies]
string-error = "0.1.0"

[dev-dependencies.tokio]
version = "0.2.22"
features = [
    "rt-threaded",
    "macros"
]
